--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.fragment:fragment-ktx:1.3.5'
     testImplementation 'junit:junit:4.+'
+    implementation 'androidx.viewpager:viewpager:1.1.0-alpha01'
     implementation 'Codeview-1.0.0:webviewcode:1.0.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
